# fsp

./: .gitignore  2026-03-03T21-54-17CET-holy_sheet_exclamationmark_x3  CAPTURE_PIPELINE.md  Cargo.toml  FUTURE-FEATURES.md  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  PRD.MD  README.md  VECTOR_ARCHITECTURE.md
src/: annotation.rs  capture.rs  clipboard.rs  editor.rs  main.rs  overlay.rs  settings.rs
